# ESTIN_INTERNAL_REGULATION_RAG_SYSTEM

./: .env.example  .gitignore  Api_Test.py  README.md  pyproject.toml  requirements.txt  vercel.json
api/: main.py
frontend/: app.js  index.html  styles.css
notebooks/: Test.ipynb
scripts/: build_index.py
src/: __init__.py
src/api/: dependencies.py  main.py
src/config/: __init__.py  settings.py
src/data_processing/: __init__.py  chunkers.py  loaders.py
src/embeddings/: __init__.py  embedder.py
src/rag/: __init__.py  agent.py  tools.py
src/vectorstore/: __init__.py  store.py
